--- a/package.json
+++ b/package.json
@@ -46,10 +46,13 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "electron": "^32.0.1",
     "electron-builder": "^24.13.3",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "wait-on": "^8.0.0"
   }
 }
